# bam2tensor

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  main.nf  nextflow.config  setup.cfg
src/: aligner.py  aligner_utils.py  intermediary_matrices.py  main.py  regions.py  run.py  tensor.py  tensor_helper.py  tensor_viz.py
tests/: test_aligner.py  test_aligner_utils.py  test_constants.py  test_intermediary_matrices.py
tests/big_input/: candidates.tsv  hg19_SORTED.fa.fai  normal.sam  tumor.bam  tumor.sam
tests/expected_output/compute_alignment/: alignment_nor1.txt  alignment_nor2.txt  alignment_tum1.txt  alignment_tum2.txt  basequal_nor1.txt  basequal_nor2.txt  basequal_tum1.txt  basequal_tum2.txt  mapping_nor1.txt  mapping_nor2.txt  mapping_tum1.txt  mapping_tum2.txt
tests/expected_output/compute_alignment_for_bam/: alignment_nor1.txt  alignment_nor2.txt  alignment_tum1.txt  alignment_tum2.txt  basequal_nor1.txt  basequal_nor2.txt  basequal_tum1.txt  basequal_tum2.txt  mapping_nor1.txt  mapping_nor2.txt  mapping_tum1.txt  mapping_tum2.txt
tests/input/: candidates.tsv  fasta.fa  fasta.fa.fai  normal.bam  normal.bam.bai  normal.sam  region2.bed  tumor.bam  tumor.bam.bai  tumor.sam  tumor_w_sc.sam
