##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bam2tensor
version = 1.0.0
url = https://github.com/TRON-Bioinformatics/bam2tensor
author = Özlem Muslu
maintainer = Özlem Muslu
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
;    License :: OSI Approved ::
;license =
description = Toolbox to convert BAM files into tensors
long_description = file: README.rst
keywords =
    BAM processing

[options]
install_requires =["torch==2.0.1", "fire==0.5.0", "pybedtools==0.9.0", "pysam",
 "matplotlib==3.7.1", "numpy==1.24.3", "pandas==1.5.3", "seaborn==0.12.2"]

# easy_config
python_requires = >=3.9

tests_require = ["pybedtools==0.9.0", "pysam", "numpy==1.24.3"]

packages = find:
package_dir =
    = src
zip_safe = False

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
tests =


[options.entry_points]
console_scripts =

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bam2tensor
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/bam2tensor
    .tox/*/lib/python*/site-packages/bam2vec

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__